--- a/.github/ISSUE_TEMPLATE/sub_issue.yml
+++ b/.github/ISSUE_TEMPLATE/sub_issue.yml
@@ -1,42 +1,16 @@
-title: "Sub Issue"
-labels: ["feature", "priority:High", "priority:Medium", "priority:Low"]
-fields:
-  automation:
-    type: string # is default type, not needed
-    value: |
-      [{
-          "trigger": "on:close",
-          "action": {
-              "type": "set-field",
-              "field": "status",
-              "value": "done"
-          },
-          "targets": ["self"]
-      },
-      {
-          "trigger": "on:close",
-          "action": {
-              "type": "set-field",
-              "field": "custom field",
-              "value": "custom value after close of 'My 1st Sub-Issue'"
-          },
-          "targets": ["self", "parent"]
-      },
-      {
-          "trigger": "on:close",
-          "action": {
-              "type": "set-field",
-              "field": "custom date field",
-              "field-type": "date",
-              "value": "2025-01-01"
-          },
-          "targets": ["self", "parent"]
-      }]
-  custom field:
-    value: value from template for 'My 1st Sub-Issue'
-  custom date field:
-    value: 2023-10-01
-    type: date
-  status:
-    value: Custom status
-    type: selection # this is also inferred automatically for selection fields
+name: "Sub-issue"
+description: "Child task linked to a parent issue"
+title: "[SUB-ISSUE] "
+labels: ["feature", "sub-issue", "priority:High", "priority:Medium", "priority:Low"]
+assignees: ["All devs"]
+
+body:
+  - type: textarea
+    id: task
+    attributes:
+      label: "Task"
+      description: "Describe the task you are solving?"
+      placeholder: "e.g. What task are you solving?"
+    validations:
+      required: true
+
