--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,7 +18,7 @@ env:
 jobs:
   detect-changes:
     name: Detect Changed Services
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     outputs:
       changed-services: ${{ steps.filter.outputs.changes }}
     steps:
