--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -56,6 +56,7 @@ jobs:
             exit 1
           fi
           echo "language=$lang" >> $GITHUB_OUTPUT
+          whoami
 
       # Java / Maven
       - name: Set up JDK
