--- a/services/redis-driver/pom.xml
+++ b/services/redis-driver/pom.xml
@@ -7,6 +7,10 @@
     <groupId>mtogo.redis</groupId>
     <artifactId>redis-driver</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <properties>
+        <maven.compiler.source>21</maven.compiler.source>
+        <maven.compiler.target>21</maven.compiler.target>
+    </properties>
 
     <dependencies>
         <dependency>
