--- a/docker-stack.yml
+++ b/docker-stack.yml
@@ -2,8 +2,21 @@ version: "3.9"
 
 services:
 
+  caddy:
+    image: caddy:2-alpine
+    ports:
+      - "443:443"
+      - "80:80"
+    volumes:
+      - ./Caddyfile:/etc/caddy/Caddyfile
+      - caddy_data:/data
+      - caddy_config:/config
+    networks:
+      - backend
+
+
   courier-service:
-    image: cphnr135/courier-service-sha:${IMAGE_TAG}
+    image: ${DOCKERHUB_USERNAME}/courier-service:${IMAGE_TAG}
     ports:
       - "7070:7070"
     depends_on:
@@ -16,7 +29,7 @@ services:
       - backend
 
   customer-service:
-    image:
+    image: ${DOCKERHUB_USERNAME}/customer-service:${IMAGE_TAG}
     ports:
       - "7071:7070"
     depends_on:
@@ -29,7 +42,7 @@ services:
       - backend
 
   management-service:
-    image:
+    image: ${DOCKERHUB_USERNAME}/management-service:${IMAGE_TAG}
     ports:
       - "7072:7070"
     depends_on:
@@ -41,7 +54,7 @@ services:
       - backend
 
   supplier-service:
-    image:
+    image: ${DOCKERHUB_USERNAME}/supplier-service:${IMAGE_TAG}
     ports:
       - "7073:7070"
     depends_on:
@@ -54,7 +67,7 @@ services:
       - backend
 
   support-service:
-    image:
+    image: ${DOCKERHUB_USERNAME}/support-service:${IMAGE_TAG}
     ports:
       - "7074:7070"
     depends_on:
@@ -81,7 +94,7 @@ services:
       - backend
 
   redis-driver:
-    image:
+    image: ${DOCKERHUB_USERNAME}/redis-driver:${IMAGE_TAG}
     depends_on:
       - redis-active-db
     networks:
@@ -110,7 +123,7 @@ services:
       - backend
 
   sql-driver:
-    image:
+    image: ${DOCKERHUB_USERNAME}/sql-driver:${IMAGE_TAG}
     depends_on:
       - MToGo-db
       - metrics-db
@@ -138,7 +151,7 @@ services:
       - backend
 
   mongo-driver:
-    image:
+    image: ${DOCKERHUB_USERNAME}/mongo-driver:${IMAGE_TAG}
     depends_on:
       - support-db
       - applicant-db
@@ -154,3 +167,5 @@ volumes:
   metrics_data:
   support_data:
   applicant_data:
+  caddy_data:
+  caddy_config:
