--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -84,7 +84,7 @@ jobs:
         working-directory: services/${{ matrix.service }}
 
       # Build & Push Docker image (only on push to main)
-      - name: Log in to GitHub Container Registry
+      - name: Log in to DockerHub
         if: ${{ github.event_name == 'push' }}
         uses: docker/login-action@v3
         with:
