--- a/services/supplier-service/pom.xml
+++ b/services/supplier-service/pom.xml
@@ -7,6 +7,10 @@
     <groupId>mtogo.supplier</groupId>
     <artifactId>supplier-service</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <properties>
+        <maven.compiler.source>21</maven.compiler.source>
+        <maven.compiler.target>21</maven.compiler.target>
+    </properties>
 
 
 </project>
