Added Redis connection and testing
The RedisConnector can now talk to the Redis DB. Testing and javadoc has been supplied aswell. The only thing left on this issue is the SQL consumer, producer and persistence

--- a/services/redis-driver/pom.xml
+++ b/services/redis-driver/pom.xml
@@ -92,6 +92,11 @@
             <version>5.20.0</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>redis.clients</groupId>
+            <artifactId>jedis</artifactId>
+            <version>7.0.0</version>
+        </dependency>
     </dependencies>
 
 </project>
