--- a/services/supplier-service/pom.xml
+++ b/services/supplier-service/pom.xml
@@ -25,6 +25,7 @@
                             <goal>shade</goal>
                         </goals>
                         <configuration>
+                            <finalName>${project.artifactId}</finalName>
                             <transformers>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                     <mainClass>mtogo.supplier.Main</mainClass>
