--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -21,7 +21,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Deploy Updated Stack File to Test Server
-        run: sudo cp docker-stack.yml /home/${{ secrets.SERVER_NAME }}/mtogo/
+        run: cp docker-stack.yml /home/${{ secrets.SERVER_NAME }}/mtogo/
 
       - name: Docker Login
         uses: docker/login-action@v3
@@ -66,7 +66,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Copy Stack File to Prod
-        run: sudo cp docker-stack.yml /home/${{ secrets.SERVER_NAME }}/mtogo/
+        run: cp docker-stack.yml /home/${{ secrets.SERVER_NAME }}/mtogo/
 
       - name: Docker Login
         uses: docker/login-action@v3
