--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -56,23 +56,29 @@ jobs:
         run: echo "Checking if test results are fine"
 
       - name: Promote Images
+        id: promote
         if: success()
         run: |
           PROD_TAG="release-$(date +%Y%m%d)"
+          echo "PROD_TAG=$PROD_TAG" >> $GITHUB_ENV
+          echo "prod_tag=$PROD_TAG" >> $GITHUB_OUTPUT
+          
           for svc in $SERVICES; do
             SRC_TAG=$(grep "$(echo $svc | tr 'a-z-' 'A-Z_')_TAG" /home/${{ secrets.SERVER_NAME }}/mtogo/.env | cut -d '=' -f2)
             docker pull "$DOCKER_USER/$svc:$SRC_TAG"
             docker tag "$DOCKER_USER/$svc:$SRC_TAG" "$DOCKER_USER/$svc:$PROD_TAG"
             docker push "$DOCKER_USER/$svc:$PROD_TAG"
-            echo "$(echo $svc | tr 'a-z-' 'A-Z_')_TAG=$PROD_TAG" >> prod-tags.env
           done
 
 
-  promote-and-deploy-prod:
+  deploy-prod:
     needs: nightly-test
     runs-on: [self-hosted, prod]
     if: ${{ needs.nightly-test.result == 'success' }}
-    name: Promote & Deploy to Production
+    name: Deploy to Production
+    env:
+      PROD_TAG: ${{ needs.nightly-test.outputs.prod_tag }}
+
     steps:
 
       - name: Checkout Repository
@@ -81,14 +87,17 @@ jobs:
       - name: Copy Stack File to Prod
         run: cp docker-stack.yml /home/${{ secrets.SERVER_NAME }}/mtogo/
 
+      - name: Update Prod .env With Promoted Tag
+        run: |
+          for svc in $SERVICES; do
+            sed -i "s/^$(echo $svc | tr 'a-z-' 'A-Z_')_TAG=.*/$(echo $svc | tr 'a-z-' 'A-Z_')_TAG=$PROD_TAG/" /home/${{ secrets.SERVER_NAME }}/mtogo/.env
+          done
+
       - name: Docker Login
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKER_USER }}
           password: ${{ secrets.DOCKER_TOKEN }}
-
-      - name: Pull & Tag Production Images
-        run: cp prod-tags.env /home/${{ secrets.SERVER_NAME }}/mtogo/.env
 
       - name: Deploy Prod Stack
         run: |
