Updated nightly workflow
Had to change when promotion of images are being done after adding a new runner.

--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -16,6 +16,8 @@ jobs:
   nightly-test:
     runs-on: [self-hosted, test]
     name: Nightly Test on Test Server
+    outputs:
+      prod_tag: ${{ steps.promote.outputs.prod_tag }}
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
