update devcontainer env with log level

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -18,6 +18,10 @@
 		]
 	  }
 	},
+
+	"containerEnv": {
+		"LOG_LEVEL": "debug"
+	  },
   
 	"postCreateCommand": "java -version && mvn -version"
   }
