--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -132,6 +132,7 @@ jobs:
 
           
           check_health "http://localhost:7071/api/health"
+          check_health "http://localhost:7070/api/health"
 
       - name: On Fail → Rollback & Notify Discord
         if: failure()
